--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,170 @@
-.App {
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Orbitron", sans-serif;
+}
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.app-wrapper {
+  height: 100vh;
+  width: 100vw;
+  position: relative;
+  overflow: hidden;
+}
+
+.background-img {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+  z-index: -1;
+}
+
+.overlay {
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(114, 49, 73, 0.3);
+  z-index: -1;
+}
+
+header {
+  text-align: center;
+  padding: 0.5rem 0;
+}
+
+.logo {
+  width: 300px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.button-container {
+  height: 30px;
+  margin-bottom: 0.5rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.button-container button {
+  background-color: transparent;
+  border: 0;
+  outline: 0;
+  border-radius: 0 0 8px 0;
+  color: #ececec;
+  padding: 0.5rem 1rem;
+  gap: 0.5rem;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  background-color: rgba(246, 246, 246, 0.1);
+}
+
+.button-container button:hover {
+  background-color: rgba(246, 246, 246, 0.1);
+  backdrop-filter: blur(2px);
+}
+
+.character-section {
+  padding: 0 3rem;
+  gap: 2rem;
+  flex-wrap: wrap;
+}
+
+.character-card {
+  position: relative;
+  min-height: 300px;
+  padding: 0.3rem;
+  border-radius: 0 0 30px 0;
+  background-color: rgba(114, 49, 73, 0.6);
+  min-width: 200px;
+  max-width: 300px;
+  /* overflow: hidden; */
+}
+
+.close-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 9;
+  color: #ececec;
+  background-color: rgba(114, 49, 73, 0.5);
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.close-icon:hover {
+  background-color: rgb(114, 49, 73);
+}
+
+.character-card .inner-container {
+  border: 1px solid #888888;
+  border-radius: 0 0 27px 0;
+  overflow: hidden;
+}
+
+.character-profile-img {
+  position: relative;
+  z-index: 2;
+  height: 250px;
+  width: 230px;
+  object-fit: cover;
+}
+
+.character-content {
+  padding: 1rem;
+  color: #f6f6f6;
+  background-color: rgba(83, 25, 46, 0.9);
+}
+
+.character-content h1 {
+  margin-bottom: 0.6rem;
+}
+
+.character-content p {
+  margin-top: 0.2rem;
+  font-size: 0.9rem;
+}
+
+.character-content span {
+  font-size: 0.7rem;
+  margin-left: 0.3rem;
+}
+
+.character-card-pattern {
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  transform: scale(1.5);
+  /* Corrected property */
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+    'FILL'0,
+    'wght'400,
+    'GRAD'0,
+    'opsz'24;
+}
+
+@media (max-width: 786px) {
+  .app-wrapper {
+    height: auto;
+    overflow: hidden;
+    padding-bottom: 5rem;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+  .logo {
+    width: 200px;
   }
 }
