--- a/src/App.css
+++ b/src/App.css
@@ -88,7 +88,7 @@ header {
   background-color: rgba(114, 49, 73, 0.6);
   min-width: 200px;
   max-width: 300px;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 .close-icon {
